# riskgpt

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  check.ipynb  explore.ipynb  guidelines.md  index.html  manual_test.py  mkdocs.yml  pyproject.toml  pytest.ini  run_tests.py  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  deploy-mkdocs.yml  publish-pypi.yml
.junie/: guidelines.md
check_context_quality/: index.html
check_definition/: index.html
communicate_risks/: index.html
cost_benefit/: index.html
design/audience_output/: index.html
design/prepare_presentation_output/: index.html
docs/: check_context_quality.md  check_definition.md  communicate_risks.md  cost_benefit.md  external_context_enrichment.md  extract_keywords.md  get_assessment.md  get_categories.md  get_drivers.md  get_impact.md  get_mitigations.md  get_monitoring.md  get_opportunities.md  get_risks.md  index.md  langserve.md  opportunities.md  prepare_presentation_output.md  prioritize_risks.md  publishing.md  risk_assessment.md  risk_categories.md  risk_drivers.md  risk_identification.md  risk_indicators.md  risk_mitigations.md  risk_workflow.md  schemas_assessment.md  schemas_base.md  schemas_category.md  schemas_context_quality.md  schemas_driver.md  schemas_external_context.md  schemas_presentation.md  schemas_risk.md  search.md
docs/design/: audience_output.md  prepare_presentation_output.md
examples/: analyse_risk_example.py  challenge_and_enrich_workflow.ipynb  codespaces_usage_guide.ipynb  colab_setup.py  colab_usage_guide.ipynb  config.yaml  explore.py  explore_context.py  explore_risk.py  visualize_enrich_context_graph.py  workbook.ipynb
external_context_enrichment/: index.html
get_assessment/: index.html
get_categories/: index.html
get_drivers/: index.html
get_mitigations/: index.html
get_monitoring/: index.html
get_opportunities/: index.html
get_risks/: index.html
notebooks/: playground.ipynb
opportunities/: index.html
prepare_presentation_output/: index.html
prioritize_risks/: index.html
publishing/: index.html
risk_assessment/: index.html
risk_categories/: index.html
risk_drivers/: index.html
risk_identification/: index.html
risk_indicators/: index.html
risk_mitigations/: index.html
risk_workflow/: index.html
riskgpt/: __init__.py  api.py  logger.py
riskgpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
riskgpt/chains/: __init__.py  base.py  bias_check.py  check_definition.py  communicate_risks.py  cost_benefit.py  get_assessment.py  get_categories.py  get_correlation_tags.py  get_drivers.py  get_impact.py  get_mitigations.py  get_monitoring.py  get_opportunities.py  get_risks.py  prioritize_risks.py
riskgpt/config/: memory.py  settings.py
riskgpt/models/: base.py  common.py  enums.py  schemas.py
riskgpt/playground/: langserve_app.py
riskgpt/processors/: input_validator.py
riskgpt/registry/: README.md  __init__.py  chain_registry.py
riskgpt/utils/: __init__.py  circuit_breaker.py  logging_config.py  memory_factory.py  misc.py  prompt_loader.py  search.py
riskgpt/workflows/: __init__.py  check_context_quality.py  external_context_enrichment.py  prepare_presentation_output.py  risk_workflow.py
schemas_assessment/: index.html
schemas_base/: index.html
schemas_category/: index.html
schemas_context_quality/: index.html
schemas_driver/: index.html
schemas_external_context/: index.html
schemas_presentation/: index.html
schemas_risk/: index.html
search/: search_index.json
src/: DomainDocumentVectorServiceSpecification.md  __init__.py  api.py  logger.py
src/chains/: base.py  bias_check.py  challenge_questions.py  challenge_risk.py  challenge_risks.py  check_bias.py  check_definition.py  communicate_risks.py  correlation_tags.py  cost_benefit.py  get_assessment.py  get_categories.py  get_correlation_tags.py  get_drivers.py  get_mitigations.py  get_monitoring.py  get_opportunities.py  get_risks.py  keypoint_text.py  opportunities.py  risk_assessment.py  risk_categories.py  risk_drivers.py  risk_identification.py  (+2 more)
tests/: conftest.py  test_async_base_chain.py  test_async_chains.py  test_bias_check.py  test_check_context_quality.py  test_check_definition.py  test_communicate_risks.py  test_cost_benefit.py  test_external_context_enrichment.py  test_get_assessment.py  test_get_categories.py  test_get_correlation_tags.py  test_get_drivers.py  test_get_mitigations.py  test_get_risks.py  test_langserve_app.py  test_logging.py  test_memory_factory.py  test_prepare_presentation_audience.py  test_prepare_presentation_output.py  test_registry.py  test_risk_workflow.py  test_search.py  test_token_logging.py  test_utils.py
(+233 files in other folders)
