[tool.poetry]
name = "riskgpt"
version = "0.1.3"
description = "Analyze project risks and opportunities using AI"
readme = "README.md"
license = "MIT"
authors = ["Thomas Wolter <thwolter@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Documentation" = "https://thwolter.github.io/riskgpt/"
"Source" = "https://github.com/thwolter/riskgpt.git"
"Tracker" = "https://github.com/thwolter/riskgpt/issues"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.25"
openai = "^1.84.0"
pydantic = "^2.11.5"
jinja2 = "^3.1.6"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
langchain-openai = "^0.3.21"
pydantic-settings = "^2.9.1"
langchain-community = "^0.3.24"
notebook = "^7.4.3"
langchain-core = "^0.3.64"
langgraph = "^0.4.8"
duckduckgo-search = "^8.0.2"
pybreaker = "^0.6.0"
google-api-python-client = "^2.137.0"
wikipedia = "^1.4.0"
langchain-google-community = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
black = "^24.4.2"
ruff = "^0.11.13"
mypy = "^1.8.0"
pre-commit = "^3.7.1"

[tool.pytest.ini_options]
pythonpath = ["riskgpt"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
pretty = true
