[project]
name = "riskgpt"
version = "0.1.5"
description = "Analyze project risks and opportunities using AI"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Thomas Wolter", email = "thwolter@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.4",
    "google-api-python-client>=2.173.0",
    "langchain>=0.3.26",
    "pybreaker>=1.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "wikipedia>=1.4.0",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.8",
]

[tool.uv]
dev-dependencies = [
    "langsmith>=0.4.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
    "types-requests>=2.32.4.20250611",
]

[project.urls]
Documentation = "https://thwolter.github.io/riskgpt/"
Source = "https://github.com/thwolter/riskgpt.git"
Tracker = "https://github.com/thwolter/riskgpt/issues"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring real external services"
]
