[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riskgpt"
version = "0.2.2"
description = "Analyze project risks and opportunities using AI"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Thomas Wolter", email = "thwolter@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "duckduckgo-search>=8.0.4",
    "google-api-python-client>=2.173.0",
    "langchain>=0.3.26",
    "pybreaker>=1.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "wikipedia>=1.4.0",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.8",
    "langchain-google-community>=2.0.7",
    "redis>=6.2.0",
    "langchain-tavily>=0.2.4",
    "notebook>=7.4.3",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.uv]
dev-dependencies = [
    "isort>=6.0.1",
    "langsmith>=0.4.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-xdist>=3.7.0",
    "ruff>=0.12.0",
    "types-requests>=2.32.4.20250611",
]

[project.urls]
Documentation = "https://thwolter.github.io/riskgpt/"
Source = "https://github.com/thwolter/riskgpt.git"
Tracker = "https://github.com/thwolter/riskgpt/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"riskgpt.prompts" = ["**/*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring real external services"
]
